Changelog for mk-slave-prefetch:

2010-08-01: version 1.0.20

   * mysqlbinlog was not killed before closing relay log file.
   * Tool crashed if server did not have query cache (issue 992).

2010-07-01: version 1.0.19

   * Relay log file changes could cause tool to wait forever (issue 1075).

2010-06-08: version 1.0.18

   * Connections did not preserve server SQL modes (issue 801).
   * Added --[no]inject-columns (issue 1003).
   * Added --relay-log-dir (issue 288).
   * Added --sleep.

2010-05-03: version 1.0.17

   * Made --secondary-indexes use --database db if necessary (issue 998).

2010-04-01: version 1.0.16

   * --secondary-indexes did not work (issue 932).
   * Added DSN OPTIONS section to POD (issue 55).

2010-02-01: version 1.0.15

   * --secondary-indexes queries did not use current database (issue 844).
   * Thread failed to start (issue 680).

2010-01-06: version 1.0.14

   * The script crashed immediately on some OS or versions of Perl (issue 733).

2009-10-30: version 1.0.13

   * Tool died on unknown binary log event types (issue 606).
   * --set-vars did not work (issue 597).
   * Command line options did not override config file options (issue 617).

2009-09-30: version 1.0.12

   * Added --pid (issue 391).

2009-08-31: version 1.0.11

   * --ask-pass did not work.

2009-07-31: version 1.0.10

   * Added RISKS section to POD (issue 538).
   * The script crashed immediately on Windows (issue 531).
   * Updates to shared code.

2009-06-30: version 1.0.9

   * Fixed "Option io-log does not exist" error (issue 414).
   * Updates to shared code.

2009-06-02: version 1.0.8

   * Script did not die if --pid file already existed (issue 383).

2009-05-03: version 1.0.7

   * Removed the --askpass long option.  Use --ask-pass instead.
   * Removed the --checkint long option. Use --check-interval instead.
   * Removed the --iolag long option.  Use --io-lag instead.
   * Removed the --maxquerytime option.  Use --max-query-time instead.